<?xml version="1.0"?>
<package format="2">
  <name>qb_hand_gazebo</name>
  <version>1.4.0</version>
  <description>This package allows to load a qb softhand onto Gazebo</description>
  <author email="liyihui.ing@gmail.com">Yihui Li</author>
  <maintainer email="liyihui.ing@gmail.com">Yihui Li</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>qb_hand_description</depend>
  <depend>gazebo_ros</depend>

</package>
